update benefit and star section for mobile

--- a/index.html
+++ b/index.html
@@ -81,40 +81,44 @@
 
     <!-- info section -->
     <section class="info">
-        <div class="shipping">
-            <div class="icon">
-                <i class="fas fa-truck"></i>
-            </div>
-            <div class="details">
-                <h5>Free Shipping</h5>
-                <p>Orders over $140</p>
-            </div>
-        </div>
-        <div class="payment">
-            <div class="icon">
-                <i class="far fa-credit-card"></i>
-            </div>
-            <div class="details">
-                <h5>Quick Payment</h5>
-                <p>100% secure payment</p>
-            </div>
-        </div>
-        <div class="promo">
-            <div class="icon">
-                <i class="fas fa-percentage"></i>
-            </div>
-            <div class="details">
-                <h5>Special Promo</h5>
-                <p>Get special promo</p>
+        <div class="info-item">
+            <div class="shipping">
+                <div class="icon">
+                    <i class="fas fa-truck"></i>
+                </div>
+                <div class="details">
+                    <h5>Free Shipping</h5>
+                    <p>Orders over $140</p>
+                </div>
+            </div >
+            <div class="payment">
+                <div class="icon">
+                    <i class="far fa-credit-card"></i>
+                </div>
+                <div class="details">
+                    <h5>Quick Payment</h5>
+                    <p>100% secure payment</p>
+                </div>
             </div>
         </div>
-        <div class="support">
-            <div class="icon">
-                <i class="fas fa-headphones-alt"></i>
+        <div class="info-item">
+            <div class="promo">
+                <div class="icon">
+                    <i class="fas fa-percentage"></i>
+                </div>
+                <div class="details">
+                    <h5>Special Promo</h5>
+                    <p>Get special promo</p>
+                </div>
             </div>
-            <div class="details">
-                <h5>24/7 Support</h5>
-                <p>Ready support</p>
+            <div class="support">
+                <div class="icon">
+                    <i class="fas fa-headphones-alt"></i>
+                </div>
+                <div class="details">
+                    <h5>24/7 Support</h5>
+                    <p>Ready support</p>
+                </div>
             </div>
         </div>
     </section>
