update product section for mobile

--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@
             <img src="./images/benefits.png" alt="benefit">
         </div>
         <div class="benefit-content">
-            <p>Our Benefit</p>
-            <h2>The More Healthy Food The Better</h2>
+            <div class="benefit-title">
+                <p>Our Benefit</p>
+                <h2>The More Healthy Food The Better</h2>
+            </div>
             <img src="./images/Polcadot.png" alt="">
             <ul>
                 <li><i class="fas fa-check"></i>Be Alive With Veggie Food.</li>
