update footer and ingrediant section for mobile

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
     <!-- ingrediant section -->
     <section class="ingradient">
-        <img src="./images/ingradient.png" alt="ingradient">
+        <!-- <img src="./images/ingradient.png" alt="ingradient"> -->
         <div class="ingrediant-content">
             <h2>Veggie Foods? Ingredients You Want To Try</h2>
             <div class="hero-btn-div">
@@ -312,7 +312,7 @@
     <section class="footer">
         <div class="footer-title">
             <h3>Foodies</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid eveniet consequuntur quibusdam?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
             <div class="footer-icon">
                 <i class="fab fa-facebook"></i>
                 <i class="fab fa-instagram"></i>
