update feature section for mobile

--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@
     <section class="feature">
         <div class="feature-title">
             <p>Our Features</p>
-            <h2>Variety of Foods</h2>
+            <h2>Variety Of Veggie Foods</h2>
         </div>
         <div class="feature-content">
             <div class="pic-1">
                 <img src="./images/pic-1.png" alt="">
             </div>
-            <div class="content">
+            <div class="content-1">
                 <h4>Veggies Are Forever</h4>
                 <p>We offer the following services</p>
                 <div class="btn-div">
@@ -195,14 +195,14 @@
             <div class="pic-2">
                 <img src="./images/pic-2.png" alt="">
             </div>
-            <div class="content">
+            <div class="content-2">
                 <h4>Good For Your Skin</h4>
                 <p>We offer the following services</p>
                 <div class="btn-div">
                     <a href="#">Discover Now<i class="fas fa-long-arrow-alt-right"></i></a>
                 </div>
             </div>
-            <div class="content">
+            <div class="content-3">
                 <h4>Veggie Food Groove</h4>
                 <p>We offer the following services</p>
                 <div class="btn-div">
@@ -212,7 +212,7 @@
             <div class="pic-3">
                 <img src="./images/pic-3.png" alt="">
             </div>
-            <div class="content">
+            <div class="content-4">
                 <h4>That Comes Close</h4>
                 <p>We offer the following services</p>
                 <div class="btn-div">
