update hero section for mobile

--- a/index.html
+++ b/index.html
@@ -40,20 +40,7 @@
                         <a href="#" class="hero-btn">Get Started<i class="fas fa-long-arrow-alt-right"></i></a>
                         
                     </div>
-                    <div class="hero-logo-area">
-                        <img src="./images/hero-logo.png" alt="">
-                        <!-- <div class="hero-logo">
-                            <div class="hero-logo-item">
-                                <img src="./images/logo-1.png" alt="hero logo">
-                            </div>
-                            <div class="hero-logo-item">
-                                <img src="./images/logo-2.png" alt="hero logo">
-                            </div>
-                            <div class="hero-logo-item">
-                                <img src="./images/logo-3.png" alt="hero logo">
-                            </div>
-                        </div> -->
-                    </div>
+                    
                 </div>
                 <div class="hero-img">
                     <img class="title-image" src="./images/title-image.png" alt="title image">
@@ -73,6 +60,20 @@
                             <img src="./images/avater.png" alt="avater">
                         </div>
                         <p>Good Quality Product</p>
+                    </div>
+                </div>
+                <div class="hero-logo-area">
+                    <!-- <img src="./images/hero-logo.png" alt=""> -->
+                    <div class="hero-logo">
+                        <div class="hero-logo-item-1">
+                            <img src="./images/logo-1.png" alt="hero logo">
+                        </div>
+                        <div class="hero-logo-item-2">
+                            <img src="./images/logo-2.png" alt="hero logo">
+                        </div>
+                        <div class="hero-logo-item-3">
+                            <img src="./images/logo-3.png" alt="hero logo">
+                        </div>
                     </div>
                 </div>
             </div>
